<resources>
    <string name="app_name">Reckon Retailer</string>
    <string name="app_name_unag_connect">Unag Connect</string>
    <string name="app_name_smart_unag">Smart Unag</string>
    <string name="login">Login</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="error">Error</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_now">Signup Now</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_your_account">Create your Account</string>
    <string name="your_name">Enter your firm name</string>
    <string name="already_registered">Already registered?</string>
    <string name="create_account">Create account</string>
    <string name="created_date">Created Date</string>
    <string name="terms_and_conditions">I agree to the <a href="http://google.com">Terms and Conditions</a></string>
    <string name="confirm_password">Enter confirm password</string>
    <string name="password">Enter password</string>
    <string name="error_input_name">Please enter a valid name.</string>
    <string name="error_input_gstin">Please enter GSTIN number.</string>
    <string name="error_business_type">Please select business type first.</string>
    <string name="error_format_email">Please enter a valid email address.</string>
    <string name="error_input_email">Please enter your email address.</string>
    <string name="error_length_password">Password must contain at least 6 alphanumeric characters.</string>
    <string name="error_empty_confirm_pass">Please enter confirm password.</string>
    <string name="error_empty_pass">Please enter password.</string>
    <string name="error_confirm_password">Password does not match the confirm password.</string>
    <string name="error_not_agree_terms">You must agree to the Terms and Conditions before using this application.</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="enter_id">Enter ID</string>
    <string name="business_type">Business Type</string>
    <string name="select_business_type">Select business type</string>
    <string name="enter_your_pincode">Enter pincode</string>
    <string name="user_id">User Id</string>
    <string name="name">Name</string>
    <string name="complete_address">Complete Address</string>
    <string name="region">Region</string>
    <string name="select_region">Select Region</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="drug_license_number">Drug License Number (Optional)</string>
    <string name="drug_license_number1">DL No. 1 (Optional)</string>
    <string name="drug_license_number2">DL No. 2 (Optional)</string>
    <string name="gstin">GSTIN</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="upload_capture_drug_license_or_bill_copy">Upload / Capture Drug license or Bill Copy</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_gstin_number">Enter GSTIN number</string>
    <string name="address">Address</string>
    <string name="shop_firm_full_name">Shop/Firm Full Name</string>
    <string name="address_line_no_one">Address line no. one</string>
    <string name="address_line_no_two">Address line no. two</string>
    <string name="select_gstin_option">Select GSTIN Option</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="error_network">Network Error</string>
    <string name="error_no_internet">No internet connection. Please check again!</string>
    <string name="error_server">Error retrieving information from server</string>
    <string name="error_parse_json">okhttp3.internal.http.RealResponseBody</string>
    <string name="error_parse_type"><![CDATA[Value <!DOCTYPE of type]]></string>
    <string name="empty_mobile">Please enter mobile number.</string>
    <string name="empty_lic_no">Please enter your ID.</string>
    <string name="lic_no_length_error">ID should be length of 4 to 20 characters.</string>
    <string name="mobile_length_error">Mobile number should be length of 8 to 12 characters.</string>
    <string name="timeout_error_issue">Time out error.</string>
    <string name="create_new_account">Create new account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_mobile_number_to_create">Enter your Mobile number to create your account.</string>
    <string name="enter_your_mobile_number_to_forgot">Enter your registered Mobile number and we will send you OTP on your mobile number.</string>
    <string name="mobile_verification">Mobile number verifications</string>
    <string name="enter_otp">SMS with One Time Password has been sent to your registered mobile number.</string>
    <string name="country">Country</string>
    <string name="select_state">Select state</string>
    <string name="select_county">Select country</string>
    <string name="state">State</string>
    <string name="search_location">Search Location</string>
    <string name="city">City</string>
    <string name="select_city">Select city</string>
    <string name="please_select_country">Please select country first.</string>
    <string name="please_select_state">Please select state first.</string>
    <string name="please_select_city">Please select city first.</string>
    <string name="please_select_country_state">Please select country and state first.</string>
    <string name="noRecordFound">No record(s) found</string>
    <string name="logout">Logout</string>
    <string name="shop_firm_name">Shop/Firm Name</string>
    <string name="email_address">Email Address</string>
    <string name="pincode">PinCode</string>
    <string name="pinCode">PinCode</string>
    <string name="enter_telephone_number">Enter telephone number</string>
    <string name="enter_drug_license_number">Enter drug license number</string>
    <string name="enter_name">Enter name</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password_">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_new_password_twice_to_confirm">Enter your New Password twice to confirm.</string>
    <string name="error_new_password_empty">Please enter new password</string>
    <string name="error_confirm_password_empty">Please enter confirm password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_">Change Password?</string>
    <string name="setting">Settings</string>
    <string name="notification">Notifications</string>
    <string name="enter_your_old_password_once_and_the_new_password_twice_to_confirm">Enter your old password once and the new password twice to confirm.</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="submit">Submit</string>
    <string name="error_old_password_empty">Please enter old password first.</string>
    <string name="add_distributor">Add Distributor</string>
    <string name="note_party_code_can_be_found_in_distributor_sales_invoice_bill"><b>Note: </b> Party Code can be found in Distributor Sales Invoice/Bill.</string>
    <string name="distributor_name">Distributor Name:</string>
    <string name="email_id">Email id:</string>
    <string name="search_distributor">Search Distributor</string>
    <string name="search_station">Search Station</string>
    <string name="pending">Pending</string>
    <string name="active">Active</string>
    <string name="locked">Locked</string>
    <string name="new_order">New Order</string>
    <string name="recent_ordered_list">Recently Ordered list</string>
    <string name="my_order">My Orders</string>
    <string name="my_bills">My Bills</string>
    <string name="search_product_name">Search Product Name</string>
    <string name="search_barcode">Search Barcode</string>
    <string name="search_ref">Search Reference Number</string>
    <string name="cart">MY CART</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="receipt_details">RECEIPT DETAILS</string>
    <string name="item_settings">Item Settings:</string>
    <string name="search_type">Search Type:</string>
    <string name="update_setting">UPDATE SETTING</string>
    <string name="thank_you_for_your_shopping_please_visit_again">Thank you for your Shopping. Please visit again!</string>
    <string name="cart_empty_please_add_some_item_into_cart">Cart Empty! Please add some item into Cart.</string>
    <string name="enter_drug_licence_number">Enter drug licence number</string>
    <string name="enter_drug_licence_number1">Enter drug licence no. 1</string>
    <string name="enter_drug_licence_number2">Enter drug licence no. 2</string>
    <string name="plz_enter_firm_name">Please enter firm name</string>
    <string name="plz_enter_add">Please enter address.</string>
    <string name="plz_enter_drug">Please enter drug licence number.</string>
    <string name="serach_party">Search Party</string>
    <string name="search_firm">Search Firm</string>
    <string name="uploadPrescription">Upload Prescription</string>
    <string name="enable_permission">Enable Permission</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="require_permission">Require Permission</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_store_name">Your Store Name</string>
    <string name="area">Area</string>
    <string name="select_area">Select Area</string>
    <string name="station">Station</string>
    <string name="select_station">Select Station</string>
    <string name="enter_drug_gst_number">Enter Drug Gst Number</string>
    <string name="enter_drug_food_number">Enter Drug Food Number</string>
    <string name="save_next">Save Next</string>
    <string name="back">Back</string>
    <string name="password_">Password</string>
    <string name="error_pincode_length">Enter 6 digit pin code</string>
    <string name="error_address1">Enter Your Address Line 1</string>
    <string name="error_pincode">Enter Your Pincode</string>
    <string name="menu_home">Home</string>
    <string name="order_id">Order Id</string>
    <string name="Rs550">₹550</string>
    <string name="test_id">#0064</string>
    <string name="test_date">2021-06-3</string>
    <string name="outstanding_small">Outstanding</string>
    <string name="receipt_book">Receipt Book</string>
    <string name="notifications">Notifications</string>
    <string name="_cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="placed_on">"Placed On "</string>
    <string name="order_value">Order Value</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="online">online</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_mode">Delivery Mode</string>
    <string name="delivery">Delivery</string>
    <string name="order_status2">Status:</string>
    <string name="sale_voucher">Sale Voucher</string>
    <string name="text_voucher">G-0012345</string>
    <string name="rs3000">Rs. 3000</string>
    <string name="rs1000">1,000.00</string>
    <string name="amount">Amount</string>
    <string name="balance">Balance</string>
    <string name="share">Share</string>
    <string name="itsTimeToUpdate">New Update</string>
    <string name="updateMsg">Because of substantial new features added recently, our app requires a mandatory update before it can be used again </string>
    <string name="update">UPDATE</string>
    <string name="print">Print</string>
</resources>