<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/orderDetailsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="@dimen/_5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10dp">

            <TextView
                android:id="@+id/tvorderDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:paddingLeft="@dimen/_16dp"
                android:paddingRight="@dimen/_16dp"
                android:paddingBottom="@dimen/_8dp"
                android:text="@string/order_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/firmNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="start"
                android:paddingLeft="@dimen/_5dp"
                android:paddingTop="@dimen/_1dp"
                android:paddingRight="@dimen/_16dp"
                android:paddingBottom="@dimen/_1dp"
                android:text="sdcscsc"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp" />

            <RelativeLayout
                android:id="@+id/orderIdRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/order_id"
                    android:textSize="@dimen/_13sp" />

                <TextView
                    android:id="@+id/orderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/test_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/placedOnRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/placed_on"
                    android:textSize="@dimen/_13sp" />

                <TextView
                    android:id="@+id/orderPlacingDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/test_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/orderValueRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/order_value"
                    android:textSize="@dimen/_13sp" />

                <TextView
                    android:id="@+id/orderValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/Rs550"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/paymentModeRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/payment_mode"
                    android:textSize="@dimen/_13sp" />

                <TextView
                    android:id="@+id/paymentMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/online"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/deliveryDateLayoutRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/delivery_date"
                    android:textSize="@dimen/_13sp" />

                <TextView
                    android:id="@+id/deliveryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/test_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/deliveryModeLayoutRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/delivery_mode"
                    android:textSize="@dimen/_13sp" />

                <TextView
                    android:id="@+id/deliveryMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/delivery"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/orderStatusRl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5dp"
                android:orientation="horizontal"
                android:padding="@dimen/_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/order_status2"
                    android:textSize="@dimen/_13sp" />

                <TextView
                    android:id="@+id/orderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/pending"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:id="@+id/shareCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="@dimen/_5dp"
                    app:cardElevation="@dimen/_5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:padding="@dimen/_5dp"
                        android:text="@string/share"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/printCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/red"
                    app:cardCornerRadius="@dimen/_5dp"
                    app:cardElevation="@dimen/_5dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:padding="@dimen/_5dp"
                        android:text="@string/print"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>