
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


            <ImageView
                android:id="@+id/app_logo_img"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_marginBottom="@dimen/_40dp"
                android:src="@drawable/app_update" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/itsTimeToUpdate"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/updateMsg"
            android:textColor="@color/color"
            android:textSize="15sp" />
        <Button
            android:id="@+id/updateBtn"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="60dp"
            android:background="@color/green"
            android:padding="3dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>